--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">LocationBasedGame</string>
-    <string name="title_activity_game_map">GameMap</string>
+    <string name="app_name">Go Hunt GPS</string>
+    <string name="title_activity_game_map">GoHuntMap</string>
 
     <string name="game_ui_fragment">GameUiFragment</string>
 </resources>
